Retarget to Spigot 1.20.1/Java 17 for Arclight Trials, add drop watchdog and /relic reset
Co-authored-by: swiqzulesud-ctrl <swiqzulesud-ctrl@users.noreply.github.com>